--- a/docker/client/Dockerfile.build
+++ b/docker/client/Dockerfile.build
@@ -15,7 +15,7 @@ RUN apt-get update && apt-get -y --no-install-recommends install \
     ca-certificates software-properties-common curl git wget gnupg \
     build-essential clang \
     libssl-dev zlib1g-dev \
-    python3-dev python3-pip python3-setuptools python3-wheel protobuf-compiler libprotobuf-dev
+    python3-dev python3-pip python3-setuptools python3-wheel
 
 ENV CC=clang
 ENV CXX=clang++
